Make fixes to UI on smaller screens

--- a/frontend/product-crud/src/styles/Header.css
+++ b/frontend/product-crud/src/styles/Header.css
@@ -93,7 +93,7 @@ header.bg::before {
     gap: 1rem;  
     background: rgba(0, 0, 0, 0.5);
     padding: 0.5rem 1rem;
-    border-bottom: 1px solid var(--light);
+    border-bottom: 1px solid var(--grey);
     transition: background .2s;
 }
 .langs-item:hover {
@@ -134,7 +134,7 @@ header.bg::before {
     transition: transform .2s, opacity .2s;
 }
 .submenu-item {
-    border-bottom: 1px solid var(--light);
+    border-bottom: 1px solid var(--grey);
 }
 .submenu-link {
     display: inline-block;
@@ -195,7 +195,7 @@ header.bg::before {
         display: block ;
     }
     .nav-item {
-        border-bottom: 1px solid var(--light);
+        border-bottom: 1px solid var(--grey);
         margin-right: 0;
     }
     .nav-item:last-child {
@@ -205,7 +205,7 @@ header.bg::before {
         display: flex;
         align-items: center;
         padding: 0.75rem 1.25rem;
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba(0, 0, 0, 0.75);
     }
     .nav-link:hover::before {
         content: none;
@@ -224,7 +224,7 @@ header.bg::before {
         transition: max-height 0.5s;
     }
     .nav-link.opened {
-        border-bottom: 1px solid var(--light);
+        border-bottom: 1px solid var(--grey);
     }
     .nav-link.opened + .submenu {
         max-height: 300px;
@@ -266,8 +266,10 @@ header.bg::before {
         margin-left: 0.5rem;
     }
 }
-
 @media only screen and (max-width: 540px) {
+    nav {
+        width: 100%;
+    }
     .header-inner {
         padding-inline: 12px;
         font-size: 1rem;
