--- a/frontend/product-crud/src/styles/Home.css
+++ b/frontend/product-crud/src/styles/Home.css
@@ -9,9 +9,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 25%;
+    height: 100%;
     width: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 20%, rgba(0, 0, 0, 0) );
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
 .intro-bg-img-wrap {
     width: 100%;
@@ -19,7 +19,7 @@
 .intro-bg-img {
     width: 100%;
     max-height: 730px;
-    object-fit: cover;
+    object-fit: cover;  
     transition: opacity 0.8s ease-in-out;
     user-select: none;
     -webkit-user-drag: none;
@@ -38,11 +38,8 @@
 }
 .intro-heading {
     font-size: 5rem;
-    mask: linear-gradient(black, black, transparent);
-    backdrop-filter: blur(1px);
     letter-spacing: 0.2rem;
-    font-weight: 500;
-    text-shadow: 5px 5px 5px black;
+
 }
 .intro-desc {
     display: flex;
@@ -247,8 +244,8 @@
 
 @media only screen and (max-width: 768px) {
     .offers-heading-logo {
-        width: 50px;
-        height: 25px;
+        width: 45px;
+        height: 22.5px;
         margin-right: 30px;
     }   
     .offers-list-wrap {
@@ -264,13 +261,17 @@
         font-size: 2.25rem;
     }
 }
-
 @media only screen and (max-width: 540px) {
+    .intro-heading {
+        font-size: 3.25rem;
+    }
     .offers-heading {
-        font-size: 1.75rem;
+        font-size: 1.6rem;
     }
     .offers-heading-logo {
-        display: none;
+        width: 40px;
+        height: 20px;
+        margin-right: 20px;
     } 
     .offers-item-brand {
         font-size: 1.5rem;
@@ -278,8 +279,8 @@
     .offers-item-model {
         font-size: 1.75rem;
     }
-    .intro-text {
-        backdrop-filter: blur(1px);
+    .intro-text {  
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     }
     .intro-desc {
         color: white;
@@ -288,5 +289,9 @@
         gap: 16px;
         text-shadow: 5px 5px 5px black;
         flex-direction: column;
+        letter-spacing: 0.35rem;
+    }
+    .intro-button {
+        letter-spacing: 0.35rem;
     }
 }
