--- a/frontend/product-crud/src/styles/index.css
+++ b/frontend/product-crud/src/styles/index.css
@@ -245,7 +245,7 @@ body {
 }
 @media only screen and (max-width: 540px) {     
     .ig {
-        max-width: 400px;
+        width: 100%;
     }
     .ig-posts-link {
         flex-basis: 50%;
